add section component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,6 +46,10 @@ a:visited {
   color: inherit;
 }
 
+a {
+ font-family: 'Source Sans Pro', sans;
+}
+
 p {
 font-size: 12px;
 }
@@ -53,4 +57,19 @@ font-size: 12px;
 li {
   margin-bottom: 0;
   padding-bottom: 0;
+}
+
+#product img {
+  min-width: 45vw;
+}
+
+.hide-scrollbar {
+  /*FireFox*/
+  scrollbar-width: none;
+  /*IE10+*/
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  /*Chrome, Safari, Edge*/
+  display: none;
 }
